crates/world/tests/snapshots/corrupt/unknown-prototype.snap
---
source: crates/world/tests/corrupt_fixtures.rs
expression: outcome.output
---
document: unknown-prototype.scene.json
source root: tests/fixtures/corrupt
1 error(s), 0 warning(s)

error scene.entities.unknown-prototype at entities[0]
  prototype "torch" is not declared in this scene
