crates/world/tests/snapshots/corrupt/zero-dimension.snap
---
source: crates/world/tests/corrupt_fixtures.rs
expression: outcome.output
---
document: zero-dimension.scene.json
source root: tests/fixtures/corrupt
1 error(s), 0 warning(s)

error scene.dimensions.zero at dimensions[0]
  extent axis y is zero
